--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "proj-cat-be",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev-watch": "nodemon index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "ajv": "^8.12.0",
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongoose": "^6.9.0",
-    "morgan": "^1.10.0",
-    "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+	"name": "proj-cat-express",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"start": "node ./bin/www",
+		"dev": "nodemon ./bin/www"
+	},
+	"dependencies": {
+		"ajv": "^8.12.0",
+		"bcrypt": "^5.1.0",
+		"cookie-parser": "~1.4.4",
+		"debug": "~2.6.9",
+		"dotenv": "^16.0.3",
+		"express": "~4.16.1",
+		"http-errors": "~1.6.3",
+		"jade": "~1.11.0",
+		"mongoose": "^6.9.0",
+		"morgan": "~1.9.1",
+		"winston": "^3.8.2",
+		"winston-daily-rotate-file": "^4.7.1"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.20"
+	}
 }
