--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"ajv": "^8.12.0",
+		"axios": "^1.3.0",
 		"bcrypt": "^5.1.0",
 		"cookie-parser": "~1.4.4",
 		"debug": "~2.6.9",
