--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"jade": "~1.11.0",
 		"mongoose": "^6.9.0",
 		"morgan": "~1.9.1",
+		"multer": "^1.4.5-lts.1",
+		"mysql": "^2.18.1",
 		"winston": "^3.8.2",
 		"winston-daily-rotate-file": "^4.7.1"
 	},
